--- a/src/App.css
+++ b/src/App.css
@@ -4,11 +4,37 @@
 }
 
 .header {
-  display: flex;
+	display: flex;
 	align-items: center;
 	justify-content: space-between;
 	height: 80px;
 	padding: 0 2rem;
 	background-color: var(--headerColor);
 	color: var(--textColor);
+}
+
+.results {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	margin-inline-start: 70px;
+	margin-top: 30px;
+	margin-bottom: 30px;
+	gap: 15px;
+}
+
+.search {
+	text-align: center;
+	padding: 15px;
+}
+
+.input {
+	font-size: 20px;
+	padding: 10px;
+	margin-top: 15px;
+	border: 3px solid rgb(211, 220, 236);
+	text-align: center;
+	margin: auto;
+	width: 80%;
+	border-radius: 10px;
+    background: #f8f8ff;
 }
